Update README file

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 ```
 # baseqtl
 
-BaseQTL is a suite of models to discover eQTLs combining between individual variation (modelled by a negative binomial distribution) with allele specific expression (ASE modelled by a beta-binomial distribution).
+BaseQTL is a suite of models to discover eQTLs combining between individual variation (modelled by a negative binomial distribution, NB) with allele specific expression (ASE modelled by a beta-binomial distribution).
 We descibe models for 4 scenarios:
 
 1. eQTL analysis when DNA-seq and RNA-seq data are available (with genotypes).
