--- a/README.Rmd
+++ b/README.Rmd
@@ -107,9 +107,9 @@ The function to call is **baseqtl.gt**. It will test for eQTL effects in one spe
 
 *min.ase.het*: minumun number of heterozygous individuals for the eQTL SNP with sufficient ASE counts in order to run the ASE component of the model, defaults to 5.
 
-"min.ase.n": minimun number of individual (any genotype) with sufficient ASE counts to run ASE model, defaults to 5.
+*min.ase.n*: minimun number of individual (any genotype) with sufficient ASE counts to run ASE model, defaults to 5.
 
-"tag.threshold": $r^2$ threshold for grouping SNPs to reduce the number of running test, recommended when running with cis-windows, defaults to 0.9. To disable, when running selected SNPS set to "no".
+*tag.threshold*: $r^2$ threshold for grouping SNPs to reduce the number of running test, recommended when running with cis-windows, defaults to 0.9. To disable, when running selected SNPS set to "no".
 
 *out*: path to output directory to write files, deafults to current directory.
 
