--- a/README.Rmd
+++ b/README.Rmd
@@ -54,6 +54,7 @@ export PATH=/where/to/install/bin:$PATH
 ## Within R:
 install.packages("devtools") # if you don't already have the package
 library(devtools)
+devtools::install_git(url = "https://gitlab.com/evigorito/addstrings.git") 
 devtools::install_git(url = "https://gitlab.com/evigorito/baseqtl.git") 
 
 ```
