--- a/README.Rmd
+++ b/README.Rmd
@@ -254,7 +254,7 @@ names(results)
     * ASE.hets: when running NB-ASE number of hets for rSNP with sufficient ASE counts, otherwise NA
     * tag.EAF/ SNP.EAF: EAF for rSNP based on the external reference panel for the population requested, NA if the rSNP is not in the reference panel
     * n.fsnps: number of exonic SNPs used in model, NA for NB model
-    *PEP: posterior exclusion probablity based on 4000 posteriror draws. Gives the proportion of posterior draws of opposite sign to the posterior mean
+    *PEP: posterior exclusion probablity based on 4000 posterior draws. Gives the proportion of posterior draws of opposite sign to the posterior mean
     * min_AI: when using reference panel bias correcion gives the most extreme allelic imbalance estimate for the exonic SNPs used in model (no imbalance corresponds to 0.5), NA otherwise
 
 
