--- a/README.Rmd
+++ b/README.Rmd
@@ -56,8 +56,8 @@ Installation has been tested on R 3.5.1. Installation time is estimated as 2 min
 ## Within R:
 install.packages("devtools") # if you don't already have the package
 library(devtools)
-devtools::install_git(url = "https://gitlab.com/evigorito/addstrings.git") 
-devtools::install_git(url = "https://gitlab.com/evigorito/baseqtl.git") 
+devtools::install_gitlab("evigorito/addstrings") 
+devtools::install_gitlab("evigorito/baseqtl")
 
 ```
 In its current form baseqtl depends on GUESSFM, to install GUESSFM do:
