--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 # BaseQTL
 
 **B**ayesian **a**llele **s**pecific **e**xpression of **QTL**, is a suite of models to discover molecular QTLs combining between individual variation (modelled by a negative binomial distribution, NB) with allele specific expression (ASE modelled by a beta-binomial distribution).
-We descibe models for 4 scenarios:
+We describe models for 4 scenarios:
 
 1. eQTL analysis when DNA-seq and RNA-seq data are available (with genotypes).
 1. eQTL analysis when only RNA-seq is available (unknown genotypes).
@@ -29,7 +29,7 @@ GNU make >= 3.82
 bcftools >= 1.3.1
 ```
 
-## Instalations
+## Installation
 
 ### bcftools can be downloaded from [htslib](http://www.htslib.org/download/)
 
@@ -56,8 +56,8 @@ Installation has been tested on R 3.5.1. Installation time is estimated as 2 min
 ## Within R:
 install.packages("devtools") # if you don't already have the package
 library(devtools)
-devtools::install_git(url = "https://gitlab.com/evigorito/addstrings.git") 
-devtools::install_git(url = "https://gitlab.com/evigorito/baseqtl.git") 
+devtools::install_gitlab("evigorito/addstrings") 
+devtools::install_gitlab("evigorito/baseqtl")
 
 ```
 In its current form baseqtl depends on GUESSFM, to install GUESSFM do:
@@ -94,9 +94,9 @@ The function to call is **baseqtl.gt**. It will test for eQTL effects in one spe
 
 *e.snps*: full name of txt file with a list of exonic SNPS across genes, details in [snakefile](https://gitlab.com/evigorito/baseqtl_pipeline/-/blob/master/input/Snakefile) output from rule fSNP_gene (fsnps output).
 
-*u.esnps*: optional argument, when strand information is not available for RNA-seq some exonic SNPs could be shared between genes making difficult to assess allele specific expression. In this case it is recommended to provide a list of exonic SNPs uniquely mapping genes. In this mode, e.snps will be used to imporve phasing accuracy and u.esnps to compute allele specific expression, further deatails in  [snakefile](https://gitlab.com/evigorito/baseqtl_pipeline/-/blob/master/input/Snakefile) output from rule fSNP_gene (ufsnps output).
+*u.esnps*: optional argument, when strand information is not available for RNA-seq some exonic SNPs could be shared between genes making difficult to assess allele specific expression. In this case it is recommended to provide a list of exonic SNPs uniquely mapping genes. In this mode, e.snps will be used to improve phasing accuracy and u.esnps to compute allele specific expression, further details in  [snakefile](https://gitlab.com/evigorito/baseqtl_pipeline/-/blob/master/input/Snakefile) output from rule fSNP_gene (ufsnps output).
 
-*gene.coord*: full name to file with gene id, gene sart and gene end, details in [snakefile](https://gitlab.com/evigorito/baseqtl_pipeline/-/blob/master/input/Snakefile) output from rule exon_by_gene.
+*gene.coord*: full name to file with gene id, gene start and gene end, details in [snakefile](https://gitlab.com/evigorito/baseqtl_pipeline/-/blob/master/input/Snakefile) output from rule exon_by_gene.
 
 *vcf*: full name to vcf file with genotypes and  allele specific expression, details in [snakefile](https://gitlab.com/evigorito/baseqtl_pipeline/-/blob/master/input/Snakefile) output from rule merge_vcf (source="DNA").
 
@@ -106,24 +106,23 @@ The function to call is **baseqtl.gt**. It will test for eQTL effects in one spe
 
 *population*: one of AFR AMR EAS EUR SAS ALL, defaults to EUR. Used to calculate EAF of eQTL SNP to include in output.
 
-*nhets*: minimun number of hetrozygous individuals for the eQTL SNP to run model, defaults to 5.
+*nhets*: minimum number of heterozygous individuals for the eQTL SNP to run model, defaults to 5.
 
-*min.ase*: minimun number of ASE counts for an individual to be included in the model, deaults to 5. 
+*min.ase*: minimum number of ASE counts for an individual to be included in the model, defaults to 5. 
 
-*min.ase.het*: minumun number of heterozygous individuals for the eQTL SNP with sufficient ASE counts in order to run the ASE component of the model, defaults to 5.
+*min.ase.het*: minimum number of heterozygous individuals for the eQTL SNP with sufficient ASE counts in order to run the ASE component of the model, defaults to 5.
 
-*min.ase.n*: minimun number of individual (any genotype) with sufficient ASE counts to run ASE model, defaults to 5.
+*min.ase.n*: minimum number of individual (any genotype) with sufficient ASE counts to run ASE model, defaults to 5.
 
 *tag.threshold*: ![r^2](https://render.githubusercontent.com/render/math?math=r%5E2) threshold for grouping SNPs to reduce the number of running test, recommended when running with cis-windows, defaults to 0.9. To disable, when running selected SNPS set to "no".
 
-*out*: path to output directory to write files, deafults to current directory.
+*out*: path to output directory to write files, defaults to current directory.
 
 *prefix*: prefix to add to output files, defaults to gene id.
 
-*model*: whether to run NB-ASE only (full model negative binomial and allele specific counts),NB (negat
-ive binomial only) or both (NB-ASE when sufficient information and NB for those associations with no ASE information), defaults to "both".
+*model*: whether to run NB-ASE only (full model negative binomial and allele specific counts),NB (negative binomial only) or both (NB-ASE when sufficient information and NB for those associations with no ASE information), defaults to "both".
 
-*stan.model*: optional parameter, defaults is to run built-in NB-ASE model. When AI_estimate is provided (below) the model corrects for reference panel bias, otherwise id doesn't. Alternatively, users can provide their alternative compiled stanmodel object, whcih should use the same input data.
+*stan.model*: optional parameter, defaults is to run built-in NB-ASE model. When AI_estimate is provided (below) the model corrects for reference panel bias, otherwise id doesn't. Alternatively, users can provide their alternative compiled stanmodel object, which should use the same input data.
 
 *stan.negonly*: compiled stanmodel object with neg only side, deafults to built-in model.
 model.
@@ -132,7 +131,7 @@ model.
 
 *prior*: prior for eQTL effect. Defaults to a mixture of 2 Gaussians learnt from external eQTL data.
 
-*ex.fsnps*: for sensitivity analysis it is possible to exclude selected exonic (feature) SNPs by proving a character vector with psoition:reference:alternative allele, defaults to NULL (no exlcusion).
+*ex.fsnps*: for sensitivity analysis it is possible to exclude selected exonic (feature) SNPs by proving a character vector with position:reference:alternative allele, defaults to NULL (no exclusion).
 
 *AI_estimate*: full name to txt file  with pre-computed allelic imbalance estimates for reference panel bias for exonic SNPs, details in [snakefile](https://gitlab.com/evigorito/baseqtl_pipeline/-/blob/master/input/Snakefile) output from rule get_AI with source="DNA". Defaults to NULL for  no correction.
 
@@ -214,10 +213,10 @@ knitr::kable(head(tags))
 
 **ENSG00000159958.GT.excluded.rsnps.txt**
 
-The table details the SNPs that were excluded fron running NB and/or NB_ASE models and the reason for exclusion.
+The table details the SNPs that were excluded from running NB and/or NB_ASE models and the reason for exclusion.
 
 * Reasons for total exclusion are:
-    1. Missing gentoypes in all samples or homozygous in all samples
+    1. Missing genotypes in all samples or homozygous in all samples
     1. Snp with zero variance
     1. rsnp with less than 'nhet' het ind. 'nhet' is the nhet argument in baseqtl.gt
 * Reasons to exclude from NB_ASE, if model = "both" those SNPs will be run with NB model
@@ -250,14 +249,14 @@ names(results)
     * Signif: "no" if 0 falls within 99% of the eQTL effect posterior distribution, "yes" otherwise
     * log2_aFC_d: when eQTL effect is significant is the distance from the closest quantile (0.5% or 99.5%) to the null. When eQTl effect is not significant is the width of the credible interval
     * n_eff: effective sample size (see stan manual for more details)
-    * Rhat: R-hat statisitc (it is recommended only results if *$Rhat < 1.1$*, see stan manual for more details)
+    * Rhat: R-hat statistic (it is recommended only results if *$Rhat < 1.1$*, see stan manual for more details)
     * model: whether NB or NB-ASE was run
-    * nhets: numbr of hets for rSNP
+    * nhets: number of hets for rSNP
     * ASE.hets: when running NB-ASE number of hets for rSNP with sufficient ASE counts, otherwise NA
     * tag.EAF/ SNP.EAF: EAF for rSNP based on the external reference panel for the population requested, NA if the rSNP is not in the reference panel
     * n.fsnps: number of exonic SNPs used in model, NA for NB model
-    *PEP: posterior exclusion probablity based on 4000 posterior draws. Gives the proportion of posterior draws of opposite sign to the posterior mean
-    * min_AI: when using reference panel bias correcion gives the most extreme allelic imbalance estimate for the exonic SNPs used in model (no imbalance corresponds to 0.5), NA otherwise
+    *PEP: posterior exclusion probability based on 4000 posterior draws. Gives the proportion of posterior draws of opposite sign to the posterior mean
+    * min_AI: when using reference panel bias correction gives the most extreme allelic imbalance estimate for the exonic SNPs used in model (no imbalance corresponds to 0.5), NA otherwise
 
 
 ```{r, echo=FALSE, results='asis'} 
@@ -281,7 +280,7 @@ I will describe below the arguments that differ from baseqtl.gt.
 
 *sample.file*: sample file for the reference panel (sample description), to be used if ex.fsnp test is numeric and population is not the whole reference panel
 
-*save_input*: whether to save input to stan model for QC purposes, defaults to FALSE to save disk space. Object ending with "noGT.stan.input.rds" is a named list with each element the inputs for a cis-SNP. For each cis-SNP there is a list of 2 elements: "NB" and "ase". "NB" is a list with elements "counts" and "p.g". "Counts" is a data.table with columns sample names and one row corresponding to the gene, values total read counts. "p.g" is a named list with each element a sample. For each sample there is an array with names genotypes (0,1,2) and values the genotype probabilities. For the "ase" list they are for elements: "m" numeric vector with  total ASE counts per sample. "g" list with each element a sample and for each sample the genoptype of the cis SNP coded as 0,1,2 and -1, with -1 indicating that the alternative allele is in haplotype 1. "p" has the same structure as "g" and indicates the probability for each genotype. "n"  is similar to "g" and "p" but contains the mapped reads to haplotype 2. The file ending with "noGT.fsnps.counts.rds is a matrix with rows samples and columns fSNPS. When a fSNPs ends with ".n" correspond to the counts matching the alternative allele and ".m" indicates the total counts matching the SNP.
+*save_input*: whether to save input to stan model for QC purposes, defaults to FALSE to save disk space. Object ending with "noGT.stan.input.rds" is a named list with each element the inputs for a cis-SNP. For each cis-SNP there is a list of 2 elements: "NB" and "ase". "NB" is a list with elements "counts" and "p.g". "Counts" is a data.table with columns sample names and one row corresponding to the gene, values total read counts. "p.g" is a named list with each element a sample. For each sample there is an array with names genotypes (0,1,2) and values the genotype probabilities. For the "ase" list they are for elements: "m" numeric vector with  total ASE counts per sample. "g" list with each element a sample and for each sample the genotype of the cis SNP coded as 0,1,2 and -1, with -1 indicating that the alternative allele is in haplotype 1. "p" has the same structure as "g" and indicates the probability for each genotype. "n"  is similar to "g" and "p" but contains the mapped reads to haplotype 2. The file ending with "noGT.fsnps.counts.rds is a matrix with rows samples and columns fSNPS. When a fSNPs ends with ".n" correspond to the counts matching the alternative allele and ".m" indicates the total counts matching the SNP.
 
 ```{r}
 ## Retrive input files for running baseqtl.nogt
@@ -345,7 +344,7 @@ results <- data.table::fread(system.file("extdata/output", "ENSG00000159958.noGT
 
 **ENSG00000159958.fsnps.het.fisher.test.txt**
 
-Table with feature SNP (exonic SNP) id (position:reference:altrnative allele), odds ratio (OR) and pvalue testing the frequencey of heterozygocity between sample and reference panel and ensembl gene id.
+Table with feature SNP (exonic SNP) id (position:reference:alternative allele), odds ratio (OR) and pvalue testing the frequency of heterozygosity between sample and reference panel and ensembl gene id.
 
 ```{r}
 fsnps <- data.table::fread(system.file("extdata/output", "ENSG00000159958.fsnps.het.fisher.test.txt", package = "baseqtl", mustWork = TRUE))
@@ -447,16 +446,16 @@ names(results)
 * **Description**
 
     * Similar output as baseqtl.gt, except that now we look at 4 coefficients: ba, bd, bt1 and bt2.
-    * bt1 and bt2 corespond to the two treatments/condition respectively, as ordered in counts.f and vcf inputs.
+    * bt1 and bt2 correspond to the two treatments/condition respectively, as ordered in counts.f and vcf inputs.
     * ba corresponds to the 'addition' coefficient, $ba = bt1 + bt2$
     * bd corresponds to the 'difference' coefficient, $bd = bt1 - bt2$
     * We evaluate 'ba' and 'bd' to look for a condition specific effect
-    * When 'ba' is significant implies a significant eQTL efect in one or both treatments. If 'bd' is significant, there is evidence for condition specific effect. The most common scenario is a significant eQTL effect in only one condition, look at 'bt1' and 'bt2'.
+    * When 'ba' is significant implies a significant eQTL effect in one or both treatments. If 'bd' is significant, there is evidence for condition specific effect. The most common scenario is a significant eQTL effect in only one condition, look at 'bt1' and 'bt2'.
     * If 'ba' is not significant but 'bd' is significant it could indicate eQTL effects in opposite directions, look at 'bt1' and 'bt2'.
     * ASE.hets gives the number of hets individuals for the rSNP with sufficient ASE counts for each treatment as '14,10'
 
 
-## eQTL analysis with samples from two conditions (diseases vs control) and unkown gentopyes.
+## eQTL analysis with samples from two conditions (diseases vs control) and unknown genotypes.
 
 In this example we are going to compare psoriasis vs normal skin, RNA-seqdata from [psoriasis](ftp://ftp.sra.ebi.ac.uk/vol1/fastq)
 We call **baseqtl2T.nogt**. I will describe below the arguments that differ from baseqtl.nogt.
@@ -475,7 +474,7 @@ We call **baseqtl2T.nogt**. I will describe below the arguments that differ from
 
 **File order in counts.f, covariates, vcf and treatment names must be the same**
 
-*fishjoin* whether to run Fisher test for heterozygocity frequency between samples and reference panel fSNPs (ex.fsnp argument) jointly in all samples or by treatment, defaults to jointly but  for QC purposes, to use the same fSNPs in ech treatment as the ones used  when the treatments were run using independent models select  NULL.
+*fishjoin* whether to run Fisher test for heterozygocity frequency between samples and reference panel fSNPs (ex.fsnp argument) jointly in all samples or by treatment, defaults to jointly but  for QC purposes, to use the same fSNPs in each treatment as the ones used  when the treatments were run using independent models select  NULL.
 
 ```{r}
 ## Retrive input files for running baseqtl2T.nogt
